arm64: DT: MSM8996-pm: Replace HYP driven FPC with retention
The HYP drive full power collapse doesn't give us good power
savings, since we use rqbalance.
Replace it with the retention state for faster power
management, allowing full power collapse only in cluster
down: this allows us to save more power and get slightly more
performance due to the fact that we get in and off of retention
way faster than a partial power collapse.

Signed-off-by: xNombre <kartapolska@gmail.com>

--- a/arch/arm/boot/dts/qcom/msm8996-pm.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-pm.dtsi
@@ -148,9 +148,9 @@
 
 					qcom,pm-cpu-level@1 {  /* C4 */
 						reg = <1>;
-						label = "fpc-def";
-						qcom,spm-cpu-mode = "fpc-def";
-						qcom,psci-cpu-mode = <4>;
+						label = "ret";
+						qcom,spm-cpu-mode = "ret";
+						qcom,psci-cpu-mode = <2>;
 						qcom,latency-us = <40>;
 						qcom,ss-power = <198>;
 						qcom,energy-overhead = <21850>;
@@ -241,9 +241,9 @@
 
 					qcom,pm-cpu-level@1 {  /* C4 */
 						reg = <1>;
-						label = "fpc-def";
-						qcom,spm-cpu-mode = "fpc-def";
-						qcom,psci-cpu-mode = <4>;
+						label = "ret";
+						qcom,spm-cpu-mode = "ret";
+						qcom,psci-cpu-mode = <2>;
 						qcom,latency-us = <40>;
 						qcom,ss-power = <198>;
 						qcom,energy-overhead = <21850>;
